[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Gimmicks/bridge_log.png" type="Texture2D" id=1]
[ext_resource path="res://Scripts/Gimmicks/Bridge.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 8, 4 )

[node name="Bridge" type="Node2D"]
process_priority = 10
script = ExtResource( 2 )

[node name="Bridge" type="CharacterBody2D" parent="."]
process_priority = 10
collision_layer = 8193
collision_mask = 8193
motion/sync_to_physics = true

[node name="mask" type="CollisionShape2D" parent="Bridge"]
position = Vector2( -8, 0 )
shape = SubResource( 1 )
one_way_collision = true

[node name="log" type="Sprite2D" parent="."]
texture = ExtResource( 1 )

[node name="PlayerCheck" type="Area2D" parent="."]
position = Vector2( -8, -16 )
collision_layer = 0
collision_mask = 4096

[node name="mask" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[connection signal="body_entered" from="PlayerCheck" to="." method="_on_PlayerCheck_body_entered"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_PlayerCheck_body_exited"]
